# aipocalypse

./: .gitignore  README.md  TODOS.md  agent_notebook.ipynb  game_world.pkl  game_world_2.pkl  game_world_3.pkl  generated_game_world.pkl  processed_game_world.pkl  processed_game_world_3.pkl  processor_notebook.ipynb  pydantic.ipynb  pyproject.toml  story_characters.pkl  world_notebook.ipynb
agents/: agent_context.py
engine/: episode_processor.py  episode_turn_graph.py  situation_processor.py
models/: game_entities.py  game_state.py  generations.py  keywords.py  observables.py  story_character.py
models/core/: actions.py  entities.py  enums.py  episode.py
models/neomodel/: conversions_neomodel.py  entities_neomodel.py  queries_neomodel.py  utils_neomodel.py
notebooks/: landmark_notebook.ipynb  narrator_notebook.ipynb  neo4j_notebook.ipynb  processor_notebook.ipynb  world_notebook.ipynb
prompts/: actor_agent_prompts.py  actor_agent_prompts_backup.py  actor_agent_prompts_claude.py  landmark_expansion_agent_prompt.py  narrator_agent_prompts.py  outcome_evaluator_agent_prompt.py  prompt_fragments.py  prompt_generations.py  story_character_prompts.py  survivor_agent_prompt.py  survivor_agent_prompts.py  world_builder_agent_prompts.py  zombie_agent_prompt.py
utils/: story_character_generator.py
